# youty

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  THIRD_PARTY_LICENSES.md  project-cli.yml  project.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bottle.yml  canary.yml  ci.yml  publish-mcp.yml  release.yml
CLI/: ArgsParser.swift  CLIConfig.swift  CLIHostWindow.swift  VaultResolver.swift  main.swift
CLI/Commands/: EmbedCommand.swift  HelpCommand.swift  ListCommand.swift  LoginCommand.swift  ReindexCommand.swift  SaveCommand.swift  SearchCommand.swift  TranscriptCommand.swift
Scripts/: audit-accessibility.sh  build-ffmpeg.sh  build-gemma-tokenizer-artifact.py  build-mcp-wheel.sh  convert-embeddinggemma-coreml.py  convert-siglip-coreml.py  convert-siglip-text-coreml.py  dump-gemma-tokenizer-reference.py  embeddinggemma-coreml-verify.py  embeddinggemma-quality-check.py  fetch-models.sh  install-cli.sh  make-dmg.sh  release-app.sh  smoke-test-extractors.sh  sparkle-sign-and-cut.sh  verify-siglip-joint-space.py  verify-siglip-python.py
Scripts/homebrew/: youty.rb
ShareExtension/: Info.plist  ShareViewController.swift
Sources/: AppDelegate.swift  AppIcon.icns  AppUpdater.swift  AuthLoginView.swift  CanvasFramePipeline.swift  Chunker.swift  ContentView.swift  DebugLog.swift  DebugRunner.swift  Downloader.swift  EmbedderProtocol.swift  EmbeddingGemmaEmbedder.swift  FFmpegBridging.h  FFmpegFrameExtractor.swift  FFmpegSampleTable.swift  FFmpegURLSessionIO.swift  FastFrameExtractor.swift  FastFramePipeline.swift  FrameEmbedder.swift  FrameExtractor.swift  FrameOCR.swift  FramePipeline.swift  GemmaTokenizer.swift  IndexBadgeView.swift  IndexSchema.sql  IndexStatusStore.swift  IndexStore.swift  Indexer.swift  Info.plist  IngestionFunnel.swift  InstagramExtractor.swift  LocalFrameExtractor.swift  MP4MoofParser.swift  MainWindowKeeper.swift  MediaDownloader.swift  MenuBarController.swift  MetadataEnricher.swift  MobileCLIPLoader.swift  OnScreenText.swift  OnboardingView.swift  (+22 more)
Sources/AppIcon.icon/: icon.json
Sources/Assets.xcassets/HeaderLogo.imageset/: Contents.json
Sources/Assets.xcassets/MenuBarY.imageset/: Contents.json
Tests/: FormattingTests.swift  URLParsingTests.swift
docs/: privacy.md  terms.md
release/: appcast.xml
youty-mcp/: .gitignore  README.md  pyproject.toml
youty-mcp/src/youty_mcp/: __init__.py  cli.py  clients.py  clip_tokenizer.py  coreml_models.py  coreml_text.py  db.py  embedder.py  embeddinggemma_text.py  install.py  retrieval.py  schema.sql  server.py  siglip_text.py
youty-mcp/tests/: conftest.py  smoke_live.py  test_chunking.py  test_endtoend.py  test_retrieval.py
youty.xcodeproj/: project.pbxproj
youty.xcodeproj/xcshareddata/xcschemes/: youty.xcscheme
