[project]
name = "youty-mcp"
version = "0.1.0"
description = "Youty MCP server — exposes the Youty vault index (sqlite-vec + FTS5) to MCP-compatible AIs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bent Eisheuer", email = "legetdev@gmail.com" }
]
keywords = ["mcp", "youty", "vault", "sqlite-vec", "search", "rag", "youtube"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Text Processing :: Indexing",
]
# Phase Q.5: upper bounds on every dependency so a future major release
# can't silently break the MCP server. Lower bounds match what the code
# actually uses; upper bounds capped one major above current (or at the
# next 0.x for pre-1.0 packages).
dependencies = [
    "mcp>=1.2.0,<2.0.0",
    "sqlite-vec>=0.1.6,<0.2.0",     # pre-1.0; breaking changes likely in 0.2
    "httpx>=0.27.0,<1.0.0",
    "numpy>=1.26.0,<3.0.0",
    # SigLIP-Base text encoder for the `search_frames` tool. transformers
    # handles SigLIP's SentencePiece tokenizer cleanly; torch runs the
    # text tower on CPU in ~50-80 ms per query on Apple Silicon. Replaces
    # the previous coremltools dependency — frame *image* embedding now
    # lives in the Mac app bundle (CoreML), only text queries run here.
    "transformers>=4.56,<5",
    "torch>=2.0,<3",
    # EmbeddingGemma text-query encoder for the `search` tool when the index is
    # built with the on-device EmbeddingGemma model (Phase S). sentence-
    # transformers runs its full pipeline (pooling + Dense heads + task prompts)
    # so MCP queries land in the exact space the Swift indexer wrote.
    "sentence-transformers>=5.0,<6",
    # SigLIP's tokenizer is SentencePiece-based; `transformers` does NOT
    # pull this in automatically — AutoTokenizer.from_pretrained() raises
    # ImportError without it. Caught by Scripts/verify-siglip-python.py.
    "sentencepiece>=0.2,<1",
    # transformers' Siglip tokenizer also pulls in a protobuf parse path
    # for the SentencePiece model bytes; protobuf isn't auto-installed
    # either. Same verification script catches it.
    "protobuf>=4,<7",
]

[project.urls]
Homepage = "https://github.com/legetdev/youty"
Repository = "https://github.com/legetdev/youty"
Issues = "https://github.com/legetdev/youty/issues"
Documentation = "https://github.com/legetdev/youty/blob/main/youty-mcp/README.md"

[project.scripts]
youty-mcp = "youty_mcp.server:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
