[project]
name = "youty-mcp"
version = "1.4.4"
description = "Youty MCP server — exposes the Youty vault index (sqlite-vec + FTS5) to MCP-compatible AIs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bent Eisheuer", email = "legetdev@gmail.com" }
]
keywords = ["mcp", "youty", "vault", "sqlite-vec", "search", "rag", "youtube"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Text Processing :: Indexing",
]
# Phase Q.5: upper bounds on every dependency so a future major release
# can't silently break the MCP server. Lower bounds match what the code
# actually uses; upper bounds capped one major above current (or at the
# next 0.x for pre-1.0 packages).
dependencies = [
    "mcp>=1.2.0,<2.0.0",
    "sqlite-vec>=0.1.6,<0.2.0",     # pre-1.0; breaking changes likely in 0.2
    "httpx>=0.27.0,<1.0.0",         # transport + fetching the on-device models
    "numpy>=1.26.0,<3.0.0",
    # Query embeddings run on-device via Core ML — the *same* EmbeddingGemma +
    # SigLIP models the Mac app/CLI use, loaded with coremltools (CPU-only, to
    # match the int8-quant indexer). This drops torch (~250 MB) + the ~1.6 GB
    # HuggingFace model downloads, and makes query and document vectors share
    # the exact same space (more accurate than the old PyTorch path).
    # coremltools is the macOS Core ML runtime — Core ML does not exist on Linux,
    # so this is a darwin-only dependency. Real (dense + frame) embedding runs only
    # on macOS, where the Youty vault + models live; Linux installs (CI, sdist) stay
    # lean, and the tokenizers below still import fine for the Linux test suite.
    "coremltools>=8.0,<10 ; sys_platform == 'darwin'",
    # transformers + sentencepiece are kept for TOKENIZATION ONLY (the proven
    # EmbeddingGemma + SigLIP tokenizers — no hand-rolled parity risk). torch
    # is not imported: tokenizers are framework-agnostic, and inference is Core ML.
    "transformers>=4.56,<6",
    "sentencepiece>=0.2,<1",
    "protobuf>=4,<8",
]

[project.urls]
Homepage = "https://github.com/legetdev/youty"
Repository = "https://github.com/legetdev/youty"
Issues = "https://github.com/legetdev/youty/issues"
Documentation = "https://github.com/legetdev/youty/blob/main/youty-mcp/README.md"

[project.scripts]
youty-mcp = "youty_mcp.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
